# Aerosmith

drone_vision_project/: requirements.txt
drone_vision_project/common/compiled/cpp/: messages.pb.cc  messages.pb.h
drone_vision_project/common/compiled/python/: messages_pb2.py
drone_vision_project/common/proto/: README.md  gen_protos.ps1  gen_protos.py  messages.proto
drone_vision_project/ground_station/command_center/: CMakeLists.txt  README.md  app_state.h  main.cpp  ui_imgui.cpp  zmq_dealer.cpp  zmq_subscriber.cpp
drone_vision_project/ground_station/command_center/tools/: local_mock_runner.py  mock_drone_publisher.py  mock_inference_worker.py  proto_smoke_test.py
drone_vision_project/ground_station/inference_worker/models/: obstacle_yolov8.py
